--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=http://localhost:8000
+# VITE_API_BASE_URL=http://localhost:8000
+VITE_API_BASE_URL=https://voice-bot-1-kr9b.onrender.com
